--- a/helperDesign/DESCRIPTION
+++ b/helperDesign/DESCRIPTION
@@ -1,12 +1,18 @@
 Package: helperDesign
 Title: What the Package Does (One Line, Title Case)
 Version: 0.0.0.9000
-Authors@R: 
+Authors@R:
     person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
            comment = c(ORCID = "YOUR-ORCID-ID"))
 Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
+Suggests:
+    testthat (>= 3.0.0),
+    rlang
+Config/testthat/edition: 3
+Imports:
+    bslib (=== 0.7.0),
+    shiny
