extend deployment logic to showcase deployed app

--- a/ShinyApp1/DESCRIPTION
+++ b/ShinyApp1/DESCRIPTION
@@ -15,6 +15,7 @@ RoxygenNote: 7.2.3
 Imports:
     shiny,
     helperDesign,
-    logger
+    logger,
+    bslib
 Remotes:
     helperDesign=MichaelHogers/ModularShiny/helperDesign
