--- a/ShinyApp3/DESCRIPTION
+++ b/ShinyApp3/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: ShinyApp3
 Title: What the Package Does (One Line, Title Case)
 Version: 0.0.0.9000
-Authors@R: 
+Authors@R:
     person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
            comment = c(ORCID = "YOUR-ORCID-ID"))
 Description: What the package does (one paragraph).
@@ -9,3 +9,10 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
+Imports:
+    shiny,
+    helperDesign,
+    logger,
+    bslib
+Remotes:
+    helperDesign=MichaelHogers/ModularShiny/helperDesign
