--- a/.github/workflows/ShinyApp1-lintr.yaml
+++ b/.github/workflows/ShinyApp1-lintr.yaml
@@ -32,6 +32,7 @@ jobs:
         with:
           extra-packages: any::lintr, local::.
           needs: lint
+        working-directory: ShinyApp1
 
       - name: Lint
         run: lintr::lint_package(path = "ShinyApp1")
