--- a/ShinyApp3/DESCRIPTION
+++ b/ShinyApp3/DESCRIPTION
@@ -16,3 +16,6 @@ Imports:
     bslib
 Remotes:
     helperDesign=MichaelHogers/ModularShiny/helperDesign
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
