fix r cmd check

--- a/ShinyAdmin/DESCRIPTION
+++ b/ShinyAdmin/DESCRIPTION
@@ -15,7 +15,9 @@ Imports:
     logger,
     bslib,
     bsicons,
-    DT
+    DT,
+    plotly,
+    stats
 Remotes:
     helperDesign=MichaelHogers/ModularShiny/helperDesign
 Suggests:
