--- a/.github/workflows/ShinyApp1-lintr.yaml
+++ b/.github/workflows/ShinyApp1-lintr.yaml
@@ -11,6 +11,7 @@ on:
     if: github.event.pull_request.draft == false
     paths:
       - "ShinyApp1/**"
+  workflow_dispatch:
 
 name: ShinyApp1 - lint
 
