--- a/.github/workflows/ShinyApp2-lintr.yaml
+++ b/.github/workflows/ShinyApp2-lintr.yaml
@@ -11,6 +11,7 @@ on:
     if: github.event.pull_request.draft == false
     paths:
       - "ShinyApp2/**"
+  workflow_dispatch:
 
 name: ShinyApp2 - lint
 
