--- a/.github/workflows/ShinyApp3-lintr.yaml
+++ b/.github/workflows/ShinyApp3-lintr.yaml
@@ -11,6 +11,7 @@ on:
     if: github.event.pull_request.draft == false
     paths:
       - "ShinyApp3/**"
+  workflow_dispatch:
 
 name: ShinyApp3 - lint
 
