--- a/.github/workflows/helperDesign-lintr.yaml
+++ b/.github/workflows/helperDesign-lintr.yaml
@@ -11,6 +11,7 @@ on:
     if: github.event.pull_request.draft == false
     paths:
       - "helperDesign/**"
+    workflow_dispatch:
 
 name: helperDesign - lint
 
